# saiteki

./: .gitignore  LICENSE  README.md  docker-compose.yml
saiteki/: README.md  package.json
saiteki-cli/: main.py  pyproject.toml
saiteki-web/: README.md  bts.jsonc
saiteki-web/apps/server/: package.json
saiteki-web/apps/server/prisma/migrations/20250925151255_add_optimization_models/: migration.sql
saiteki-web/apps/server/prisma/schema/: auth.prisma  models.prisma
saiteki-web/apps/server/src/: index.ts
saiteki-web/apps/server/src/lib/: nats.ts
saiteki-web/apps/server/src/routers/: index.ts  optimization.ts
saiteki-web/apps/server/src/routers/internal/: index.ts  optimization.ts
saiteki-web/apps/web/: package.json
saiteki-web/apps/web/src/: routeTree.gen.ts
saiteki-web/apps/web/src/components/: header.tsx
saiteki-web/apps/web/src/components/ui/: textarea.tsx
saiteki-web/apps/web/src/routes/: __root.tsx  index.tsx  optimization.tsx
saiteki-web/apps/web/src/routes/optimization/: $taskId.tsx
saiteki-worker/: README.md  main.py  pyproject.toml
saiteki-worker/worker/: models.py  shutdown_service.py  task_service.py
saiteki/apps/server/: package.json
saiteki/apps/web/: index.html
